applets/pager/plugin/pagermodel.h
@@ -41,6 +41,7 @@ class PagerModel : public QAbstractListModel
     Q_PROPERTY(int count READ rowCount NOTIFY countChanged)
     Q_PROPERTY(PagerType pagerType READ pagerType WRITE setPagerType NOTIFY pagerTypeChanged)
     Q_PROPERTY(bool enabled READ enabled WRITE setEnabled NOTIFY enabledChanged)
+    Q_PROPERTY(bool shouldShowPager READ shouldShowPager NOTIFY shouldShowPagerChanged);
     Q_PROPERTY(bool showDesktop READ showDesktop WRITE setShowDesktop NOTIFY showDesktopChanged)
     Q_PROPERTY(bool showOnlyCurrentScreen READ showOnlyCurrentScreen WRITE setShowOnlyCurrentScreen NOTIFY showOnlyCurrentScreenChanged)
     Q_PROPERTY(QRect screenGeometry READ screenGeometry WRITE setScreenGeometry NOTIFY screenGeometryChanged)
@@ -73,6 +74,8 @@ public:
     bool enabled() const;
     void setEnabled(bool enabled);
 
+    bool shouldShowPager() const;
+
     bool showDesktop() const;
     void setShowDesktop(bool show);
 
@@ -104,6 +107,7 @@ Q_SIGNALS:
     void countChanged() const;
     void pagerTypeChanged() const;
     void enabledChanged() const;
+    void shouldShowPagerChanged() const;
     void showDesktopChanged() const;
     void showOnlyCurrentScreenChanged() const;
     void screenGeometryChanged() const;
